--- a/lw6/css/style.css
+++ b/lw6/css/style.css
@@ -353,6 +353,7 @@
 {
     display: block;
     margin: 0 auto;
+    max-width: 100%;
 }
 
 .movie-container__description
